--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.41",
     "@types/react-dom": "^17.0.14",
-    "@types/react-router-dom": "5.1.8",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux": "3.6.0",
     "axios": "0.21.4",
     "react": "^17.0.2",
